<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.quiz.admin.myquiz.MenuActivity">

    <RelativeLayout
        android:id="@+id/hsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standart_layout_margin"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:elevation="@dimen/button_elevation"
        android:padding="30dp">

        <TextView
            android:id="@+id/hsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/standart_layout_margin"
            android:text="@string/showHS"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standart_layout_margin"
            android:layout_below="@id/hsText"
            android:layout_centerHorizontal="true"
            android:numStars="5"
            android:isIndicator="false"
            android:rating="0.5"
            android:stepSize="0.5"
            android:theme="@style/RatingBar"/>
    </RelativeLayout>

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standart_layout_margin"
        android:gravity="center"
        android:background="#FFF"
        android:layout_below="@id/hsView"
        android:elevation="@dimen/button_elevation"
        android:padding="@dimen/standart_padding"
        android:shadowColor="@color/colorPrimaryDark"
        android:text="@string/button_starttext"
        android:textSize="@dimen/standart_size" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standart_layout_margin"
        android:gravity="center"
        android:background="#FFF"
        android:layout_below="@id/startButton"
        android:elevation="@dimen/button_elevation"
        android:padding="@dimen/standart_padding"
        android:shadowColor="@color/colorPrimaryDark"
        android:text="@string/settings_label"
        android:textSize="@dimen/standart_size" />
</RelativeLayout>
